# quant-futures-system

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  CODEX_GUIDE.md  FUTURES_RISK_POLICY.md  LIVE_TRADING_CHECKLIST.md  MARKET_DATA_ENGINE.md  OBSERVATION_ENGINE_DESIGN.md  OPENCLAW_RUNBOOK.md  RESEARCH_PROCESS.md  SYSTEM_DESIGN.md  YINFUJING_TRADING_PRINCIPLES.md
src/quant_futures/: __init__.py
src/quant_futures/alpha/: __init__.py  baseline.py  engine.py  models.py  protocols.py
src/quant_futures/core/: __init__.py  config.py  events.py  exceptions.py  logger.py
src/quant_futures/decision/: __init__.py  engine.py  models.py  policies.py  protocols.py
src/quant_futures/domain/: __init__.py  events.py  market.py  order.py  position.py  risk.py
src/quant_futures/infrastructure/: __init__.py
src/quant_futures/infrastructure/health/: __init__.py  check.py
src/quant_futures/market_data/: __init__.py  collector.py  models.py  repository.py  source.py
src/quant_futures/observation/: __init__.py  calculator.py  confidence.py  engine.py  features.py  flow.py  models.py  pipeline.py  regime.py  state.py
src/quant_futures/timing/: __init__.py  confidence.py  engine.py  expiration.py  filters.py  maturity.py  models.py  rules.py  state.py  transition.py  window.py
tests/unit/: test_alpha_engine.py  test_decision_engine.py  test_event_bus.py  test_market_data_collector.py  test_market_model.py  test_observation_engine.py  test_observation_pipeline.py  test_order_model.py  test_position_model.py  test_timing_engine.py
(+4 files in other folders)
